--- a/drag.html
+++ b/drag.html
@@ -1,54 +1,89 @@
-  <!DOCTYPE html>
-  <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <style>
-    body{
-      position: relative;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <style>
+    #draggable {
+      width: 200px;
+      height: 20px;
+      text-align: center;
+      background: white;
     }
-    </style>
-  </head>
-  <body>
-    <div id="test" style="height: 100px;width: 100px;background:pink;position:absolute;top:0;left:0;">
-      测试文字
+
+    .dropzone {
+      width: 200px;
+      height: 20px;
+      background: blueviolet;
+      margin-bottom: 10px;
+      padding: 10px;
+    }
+  </style>
+</head>
+<body>
+  <div class="dropzone">
+    <div id="draggable" draggable="true" ondragstart="event.dataTransfer.setData('text/plain',null)">
+      This div is draggable
     </div>
-    <script>
-      test.onmousedown = function(e){
-      e = e || event;
-      //获取元素距离定位父级的x轴及y轴距离
-      var x0 = this.offsetLeft;
-      var y0 = this.offsetTop;
-      console.log('this', this)
-      console.log('x0', x0)
-      console.log('y0', y0)
-      //获取此时鼠标距离视口左上角的x轴及y轴距离
-      var x1 = e.clientX;
-      var y1 = e.clientY;
-      console.log('e1', e)
-      document.onmousemove = function(e){
-        e = e || event;
-        console.log('e2', e)
-        //获取此时鼠标距离视口左上角的x轴及y轴距离
-        x2 = e.clientX;
-        y2 = e.clientY;
-        //计算此时元素应该距离视口左上角的x轴及y轴距离
-        var X = x0 + (x2 - x1);
-        var Y = y0 + (y2 - y1);
-        //将X和Y的值赋给left和top，使元素移动到相应位置
-        test.style.left = X + 'px';
-        test.style.top = Y + 'px';
-      }
+  </div>
+  <div class="dropzone"></div>
+  <div class="dropzone"></div>
+  <div class="dropzone"></div>
+  <script>
+    var dragged;
+
+    /* 拖动目标元素时触发drag事件 */
+    document.addEventListener("drag", function( event ) {
+
+    }, false);
+
+    document.addEventListener("dragstart", function( event ) {
+        // 保存拖动元素的引用(ref.)
+        dragged = event.target;
+        // 使其半透明
+        event.target.style.opacity = .5;
+    }, false);
+
+    document.addEventListener("dragend", function( event ) {
+        // 重置透明度
+        event.target.style.opacity = "";
+    }, false);
+
+    /* 放置目标元素时触发事件 */
+    document.addEventListener("dragover", function( event ) {
+        // 阻止默认动作以启用drop
+        event.preventDefault();
+    }, false);
+
+    document.addEventListener("dragenter", function( event ) {
+        // 当可拖动的元素进入可放置的目标时高亮目标节点
+        if ( event.target.className == "dropzone" ) {
+            event.target.style.background = "purple";
+        }
+
+    }, false);
+
+    document.addEventListener("dragleave", function( event ) {
+        // 当拖动元素离开可放置目标节点，重置其背景
+        if ( event.target.className == "dropzone" ) {
+            event.target.style.background = "";
+        }
+
+    }, false);
+
+    document.addEventListener("drop", function( event ) {
+        // 阻止默认动作（如打开一些元素的链接）
+        event.preventDefault();
+        // 将拖动的元素到所选择的放置目标节点中
+        if ( event.target.className == "dropzone" ) {
+            event.target.style.background = "";
+            dragged.parentNode.removeChild( dragged );
+            event.target.appendChild( dragged );
+        }
       
-      document.onmouseup = function(e){
-        //当鼠标抬起时，拖拽结束，则将onmousemove赋值为null即可
-        document.onmousemove = null;
-      }
-      //阻止默认行为
-      return false;
-      }
-    </script>
-  </body>
-  </html>
+    }, false);
+  </script>
+</body>
+</html>
